// Vitest Snapshot v1

exports[`Interface extends interface > Interface extends interface (No references, Option: clean all) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Interface extends interface > Interface extends interface (No references, Option: clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Interface extends interface > Interface extends interface (No references, Option: clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Interface extends interface > Interface extends interface (No references, Option: default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`No reference interface > Interface which has no references (Option: clean all) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`No reference interface > Interface which has no references (Option: clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`No reference interface > Interface which has no references (Option: clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`No reference interface > Interface which has no references (Option: default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Redeclaration of types > Redeclaration of types #6 (Option: clean all) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}
defineProps<Props>()
</script>
"
`;

exports[`Redeclaration of types > Redeclaration of types #6 (Option: clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}



defineProps<Props>()

</script>
"
`;

exports[`Redeclaration of types > Redeclaration of types #6 (Option: clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}
defineProps<Props>()
</script>
"
`;

exports[`Redeclaration of types > Redeclaration of types #6 (Option: default) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}



defineProps<Props>()

</script>
"
`;
